Name:                Expression
Version:             0.1
Description:         Playing around
License:             GPL
License-file:        LICENSE
Author:              Jarra
Maintainer:          suhrawardi@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable hsexpr
  Main-is:           expression.hs
  Build-Depends:     base >= 3 && < 5, process, ansi-terminal
